tests/macro-tests/cases/widget_new/unknown_field.stderr
error[E0599]: no method named `unknown` found for struct `zng_wgt::layout_props::margin_inputs__` in the current scope
 --> cases/widget_new/unknown_field.rs:6:20
  |
6 |         margin = { unknown: 0 };
  |                    ^^^^^^^ method not found in `zng_wgt::layout_props::margin_inputs__`
